# AndroidObjectTracker

./: .gitignore  README.md  annotation_renderer.py  build.gradle.kts  pipeline.py  pipeline_orchestrator.py  pyproject.toml  settings.gradle.kts  yolo_tracker.py
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidobjecttracker/: FastVideoProcessor.kt  MainActivity.kt  PythonBridge.kt  VideoEncoder.kt
app/src/main/java/com/example/androidobjecttracker/pipeline/: PipelineOrchestrator.kt  PipelineTypes.kt  YoloDetector.kt
app/src/main/java/com/example/androidobjecttracker/processor/: FastVideoProcessor.kt  VideoEncoder.kt
app/src/main/java/com/example/androidobjecttracker/ui/: TrackingUI.kt
app/src/main/java/com/example/androidobjecttracker/utils/: AppLog.kt
app/src/main/python/: tracker_engine.py  tracker_logic.py
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
model-engine/: build.gradle.kts
model-engine/src/main/java/com/example/modelengine/: AppLog.kt  ModelExecutor.kt  SOTExecutor.kt  SortTracker.kt  StaticTracker.kt  TrackingConfig.kt  YoloExecutor.kt
termux_pipeline/: abavit_tracker.py  annotation_renderer.py  pin_tracker.py  pipeline.py  pipeline_orchestrator.py  yolo_tracker.py
